sumo/tests/sumo/extended/emitter/errors/xml/no_begin/tripinfos.sumo
<?xml version="1.0"?>

<!-- generated on 07/22/08 10:26:42 by SUMO sumo Version 0.9.7
<configuration>

   <input>
      <net-file>three_split.net.xml</net-file>
      <additional-files>input_routes.rou.xml,input_additional.add.xml</additional-files>
   </input>

   <output>
      <tripinfo-output>tripinfos.xml</tripinfo-output>
   </output>

   <processing>
      <no-duration-log>true</no-duration-log>
      <no-step-log>true</no-step-log>
   </processing>

</configuration>
-->

<tripinfos>
</tripinfos>
